elastic/styles/styles.css
/* ... */
.ui-datepicker .ui-datepicker-header,
.ui-datepicker .ui-datepicker-title {
  line-height: 4rem;
  height: 4rem;
  padding: 0;
}
.ui-datepicker .ui-datepicker-header {
  border-bottom: 1px solid #ddd;
}
.ui-datepicker .ui-datepicker-header a {
  height: 4rem;
}
.ui-datepicker .ui-datepicker-header select {
  display: inline-block;
}
.ui-datepicker .ui-icon {
  background-image: none !important;
  background-position: none !important;
}
.ui-datepicker .ui-datepicker-prev,
.ui-datepicker .ui-datepicker-next {
  cursor: pointer;
  width: auto;
}
.ui-datepicker .ui-datepicker-prev:before,
.ui-datepicker .ui-datepicker-next:before {
  content: "\f053";
  margin: 0 0.25em;
  height: auto;
  width: 1em;
}
.ui-datepicker .ui-datepicker-prev:before {
  content: "\f053";
}
.ui-datepicker .ui-datepicker-next:before {
  content: "\f054";
}
.ui-datepicker td a {
  padding: 0;
  line-height: 1.8em;
  border-radius: 0.3rem;
}
.ui-datepicker .ui-state-default,
.ui-datepicker.ui-widget-content .ui-state-default {
  border: 0;
  background: transparent;
  color: #2c363a;
}
.ui-datepicker .ui-datepicker-days-cell-over a,
.ui-datepicker .ui-datepicker-days-cell-over a.ui-state-default,
.ui-datepicker .ui-state-highlight,
.ui-datepicker.ui-widget-content .ui-state-highlight {
  background: #d0f0ff;
  color: !default;
}
.ui-datepicker a.ui-state-active {
  background: #37beff !important;
  color: #fff !important;
  font-weight: bold;
}
.ui-datepicker html.touch td a {
  font-size: 1.2em;
  line-height: 2.2em;
}
.input-group > .form-control.hasDatepicker {
  position: initial;
}
.minicolors-panel {
  border: 1px solid #d4dbde;
  box-shadow: 3px 3px 5px #f1f3f4;
  border-radius: 0.3rem;
  height: 152px;
  padding: 1px;
}
.input-group .minicolors-input {
  width: 100%;
  min-width: 130px;
  border-left: 0;
  border-right: 0;
}
@media screen and (max-width: 320px) {
  .ui-widget-content {
    border-radius: 0;
  }
  .ui-menu {
    border-radius: 0.3rem;
    left: 15px !important;
    right: 15px;
    width: auto;
  }
  .ui-dialog .ui-dialog-content:not(.iframe) {
    padding: 0.65rem;
  }
}
/**
 * Roundcube Webmail styles for the Elastic skin
 *
 * Copyright (c) The Roundcube Dev Team
 *
 * The contents are subject to the Creative Commons Attribution-ShareAlike
 * License. It is allowed to copy, distribute, transmit and to adapt the work
 * by keeping credits to the original authors in the README.md file.
 * See http://creativecommons.org/licenses/by-sa/3.0/ for details.
 */
/*** Dialogs and popovers ***/
.popupmenu {
  display: none;
  padding: 0;
  min-width: 180px;
  height: 100%;
}
.popupmenu li > a {
  width: 100%;
}
.popupmenu.propform {
  overflow: hidden;
  padding: 0.25rem;
}
.popupmenu.simplelist {
  min-width: 80px;
}
.popup.justified {
  display: flex;
  justify-content: space-around;
}
.popover-body {
  padding: 0;
  overflow-x: hidden;
}
.popover-body > .popupmenu {
  display: block !important;
}
.popover {
  box-shadow: 3px 3px 5px #f1f3f4;
  border-color: #d4dbde;
  padding: 0;
}
.popover .popover-header {
  display: none;
}
.popover .listing li:first-child {
  border-radius: 0.25rem 0.25rem 0 0;
}
.popover .listing li:last-child {
  border-radius: 0 0 0.25rem 0.25rem;
}
#rcmKSearchpane {
  width: auto;
  height: auto;
}
#rcmKSearchpane li {
  padding-right: 0.5rem;
}
html.layout-small #rcmKSearchpane,
html.layout-phone #rcmKSearchpane {
  bottom: auto;
  border: 1px solid #ced4da;
}
html.layout-phone #rcmKSearchpane {
  max-width: 100% !important;
}
html.layout-small .popover:not(.select-menu),
html.layout-phone .popover:not(.select-menu) {
  margin: 0 !important;
  padding: 0;
  right: 0;
  left: initial !important;
  bottom: 0;
  top: 0;
  width: 272px;
  transform: none !important;
  border-radius: 0;
  border: 0;
  display: flex;
  flex-direction: column;
  box-shadow: none;
}
html.layout-small .popover:not(.select-menu) div.arrow,
html.layout-phone .popover:not(.select-menu) div.arrow {
  display: none;
}
html.layout-small .popover:not(.select-menu) .listing li:last-child,
html.layout-phone .popover:not(.select-menu) .listing li:last-child {
  border-bottom: 1px solid #f1f3f4;
}
html.layout-small .popover-overlay,
html.layout-phone .popover-overlay {
  z-index: 1000;
  background-color: rgba(44, 54, 58, 0.5);
  position: absolute;
  top: 0;
  bottom: 0;
  width: 100%;
}
html.layout-small .popover-header,
html.layout-phone .popover-header {
  display: block;
  border-radius: 0;
  border: 0;
  padding: 0 0.5em;
  height: 58px;
  min-height: 58px;
  line-height: 58px;
  font-size: 16px;
  color: #fff;
  background-color: #005984;
}
html.layout-small .popover-header:before,
html.layout-phone .popover-header:before {
  display: none;
}
html.layout-small .popover-header a,
html.layout-phone .popover-header a {
  display: inline-block;
  width: 100%;
}
html.layout-small .popover-body > *,
html.layout-phone .popover-body > * {
  max-height: 100% !important;
}
html.touch .popover .listing li a {
  line-height: 47px;
  font-size: 16px;
  padding: 0 0.5em;
}
html.touch .popover .listing li a:before {
  float: left;
}
.select-menu {
  max-width: initial;
  margin: 0;
}
.select-menu .listing li a {
  padding-left: 0.25rem;
  outline: 0;
}
.select-menu .popover-header {
  border-radius: 0.25rem 0.25rem 0 0 !important;
}
/** PGP Key search/import dialog **/
.pgpkeyimport div.key {
  position: relative;
  padding: 0.5rem 0;
}
.pgpkeyimport div.key.revoked,
.pgpkeyimport div.key.disabled {
  color: #737677;
}
.pgpkeyimport div.key label {
  display: inline-block;
  margin-right: 0.5em;
  margin-bottom: 0;
}
.pgpkeyimport div.key label:after {
  content: ":";
}
.pgpkeyimport div.key label.keyid {
  display: none;
}
.pgpkeyimport div.key label + a,
.pgpkeyimport div.key label + span {
  line-height: 2.6rem;
  margin-right: 1em;
  white-space: nowrap;
  text-decoration: none;
}
.pgpkeyimport div.key label.keyid + a {
  font-weight: bold;
}
.pgpkeyimport div.key label.keyid + a:before {
  content: "\f084";
}
/* ... */

